--- a/packages/threat-composer/package.json
+++ b/packages/threat-composer/package.json
@@ -31,6 +31,7 @@
     "@types/d3": "^7",
     "@types/indefinite": "^2.3.1",
     "@types/jest": "^29.4.0",
+    "@types/json-to-pretty-yaml": "^1.2.1",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18",
     "@types/react": "18.0.0",
@@ -71,7 +72,9 @@
     "@emotion/react": "^11.11.0",
     "browser-image-compression": "^2.0.2",
     "d3": "^7",
+    "docx": "^8.5.0",
     "indefinite": "^2.4.3",
+    "json-to-pretty-yaml": "^1.2.2",
     "lodash.isequal": "^4.5.0",
     "react-markdown": "^8.0.7",
     "react-simply-carousel": "^9.0.0",
@@ -83,6 +86,7 @@
     "remark-rehype": "^10.1.0",
     "sanitize-html": "^2.10.0",
     "unified": "^10.1.2",
+    "unist-util-visit": "^5.0.0",
     "use-local-storage-state": "^18.3.3",
     "uuid": "^9.0.0",
     "zod": "^3.22.3"
