--- a/packages/threat-composer/package.json
+++ b/packages/threat-composer/package.json
@@ -69,12 +69,15 @@
     "@cloudscape-design/design-tokens": "^3.0.34",
     "@cloudscape-design/global-styles": "^1.0.23",
     "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "browser-image-compression": "^2.0.2",
     "d3": "^7",
     "indefinite": "^2.4.3",
     "lodash.isequal": "^4.5.0",
     "react-markdown": "^8.0.7",
     "react-simply-carousel": "^9.0.0",
+    "reactflow": "^11.10.4",
     "rehype-raw": "^6.1.1",
     "rehype-stringify": "^9.0.3",
     "remark-frontmatter": "^4.0.1",
